# pddlp

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .mailmap  LICENSE  Makefile  README  README.md  REUSE.toml  meson.build  meson_options.txt  pddlp-tokenize.c  pddlp.c  pddlp.h  run-tests.tcl
.github/workflows/: reuse.yml  test.yml
LICENSES/: BSD-3-Clause.txt
pddlp/: pddlp.c  pddlp.h
subprojects/: criterion.wrap
tests/: meson.build  testsuite.c
tests/tokenizer/: blocks-strips-typed.expected  blocks-strips-typed.test  comment.expected  comment.test  crew-planning-temporal-satisficing-instance.expected  double-characters.expected  double-characters.test  keywords.expected  keywords.test  name.expected  name.test  number.expected  number.test  single-characters.expected  single-characters.test  sokoban-temporal-satisficing.expected  sokoban-temporal-satisficing.test  symbol.expected  symbol.test  variable.expected  variable.test
